# ApplyKit

./: .clippy.toml  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  DOC-RECONCILIATION.md  README.md  SESSION-PLAN.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.cargo/: audit.toml  config.toml
.codex/: codex-os.manifest.json  commands.md  required-gates-waivers.json  setup.sh  verify.commands
.github/: CODEOWNERS
.perf-baselines/: build-time.json  bundle.json
config/: applykit.toml
crates/applykit_core/: Cargo.toml
crates/applykit_core/src/: banks.rs  classify.rs  config.rs  determinism.rs  diff.rs  insights.rs  jd.rs  lib.rs  manifest.rs  messages.rs  packet.rs  pipeline.rs  resume.rs  score.rs  signing.rs  source_preview.rs  storage.rs  tests.rs  truth_gate.rs  types.rs
data/: bullet_bank.json  skills_bank.json
docs/: PORTFOLIO-DISPOSITION.md  launch-checklist.md  llm.md  local-rc-smoke-runbook.md  phase5-live-window-revalidation-2026-02-22.md  phases.md  post-launch-verification.md  release-distribution-macos.md  release-readiness-phase1.md  release-rehearsal-2026-02-22.md  release-runbook.md  repo-flattening-branch-protection-plan-2026-04-10.md  repo-flattening-communication-plan-2026-04-16.md  repo-flattening-decision-pack-2026-04-17.md  repo-flattening-design-2026-04-08.md  repo-flattening-dry-run-1-2026-04-11.md  repo-flattening-dry-run-2-2026-04-15.md  repo-flattening-execution-checklist-2026-04-13.md  repo-flattening-gate-parity-spec-2026-04-09.md  repo-flattening-path-inventory-2026-04-07.md  repo-flattening-post-cutover-stabilization-2026-02-22.md  repo-flattening-prep.md  repo-flattening-rollback-playbook-2026-04-14.md  roadmap-2026q1.md  rollback-checklist.md  security-advisory-tracking.md  security-hardening-cycle-2026-03-01.md  spec.md  testing.md  truth-gate.md  ui-contrast-audit-2026-03-01.md  ui-hardening-report-2026-03-01.md  ui.md  vap-manifest-v1.md  week3-checklist.md  week3-closeout-2026-03-13.md  week3-security-working-report-2026-03-09.md  week5-hardening-closeout-2026-03-29.md  (+7 more)
script/: build_and_run.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
(+110 files in other folders)
