[workspace]
members = [
  "crates/applykit_core",
  "crates/applykit_llm",
  "crates/applykit_export",
  "crates/applykit_cli",
  "src-tauri",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["ApplyKit"]

[workspace.dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
toml = "0.8"
regex = "1.11"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
rusqlite = { version = "0.37", features = ["bundled"] }
sha2 = "0.10"
walkdir = "2.5"
unicode-normalization = "0.1"
tempfile = "3.14"
indexmap = { version = "2.7", features = ["serde"] }
zip = { version = "2.2", default-features = false, features = ["deflate"] }
proptest = "1.6"
