[package]
name = "applykit_tauri"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "applykit_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tauri = { version = "2.9", features = [] }
applykit_core = { path = "../crates/applykit_core" }
applykit_export = { path = "../crates/applykit_export" }

[dev-dependencies]
tempfile.workspace = true
