[package]
name = "applykit_core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
indexmap.workspace = true
regex.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
toml.workspace = true
unicode-normalization.workspace = true
walkdir.workspace = true
applykit_llm = { path = "../applykit_llm" }

[dev-dependencies]
tempfile.workspace = true
proptest.workspace = true
